# Streamazon

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  debug_aws.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  template.yaml
.github/workflows/: ci.yml
aws_monitor/: __init__.py
aws_monitor/cli/: __init__.py  cli.py
aws_monitor/core/: __init__.py  anomaly_detector.py  aws_client.py  config.py  cost_analyzer.py  logging_config.py  usage_tracker.py  utils.py
aws_monitor/web/: __init__.py  streamlit_app.py
docs/: RESEARCH.md
scripts/: setup.sh  start_stop_service.sh
tests/: __init__.py  conftest.py
tests/unit/core/: test_aws_client.py  test_cost_analyzer.py
